# openFFB

./: CMakeLists.txt  README.md  notes.txt
docs/: openffb.service
docs/openffb/: config
docs/openffb/games/: generic-driving  generic-driving-no-ffb-support  initial-d  outrun-chihiro
include/: cli.h  config.h  debug.h  device.h  ffb.h  ffbhelper.h  openffb.h  sdlhelper.h
src/: cli.c  config.c  debug.c  device.c  ffb.c  ffbhelper.c  openffb.c  sdlhelper.c
tests/: burst_end_with_center.sh
